# python-project-template

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TEMPLATE_CLAUDE.md  claude.md  dev-requirements.in  dev-requirements.txt  docker-compose.yml  justfile  pyproject.toml  pytest.ini  readme.md
.github/workflows/: adjust-claude-md.yml  new-repo-created.yml  update-readme.yml
editor/: settings.json
src/: _http.py
tools/: .dockerignore  .flake8  .isort.cfg  .pre-commit-config.yaml  pyproject.toml
