[project]
name = "python-project-template"
version = "0.1.0"
description = "A modern Python project template with best practices and tooling"
requires-python = ">=3.12"
dependencies = ["httpx"]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "pre-commit", "ruff"]

[tool.ruff]
line-length = 110
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "N",
    "ASYNC",
    "S",
    "TD",
    "T20",
    "ARG",
    "FIX",
    "ERA",
    "B",
    "A",
    "C4",
]
ignore = ["TD003"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
known-local-folder = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402", "S101"]

[tool.pytest.ini_options]
python_files = "test*.py"
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--show-capture=stdout",
    "--disable-warnings",
    "--cov=src",
    "--cov-report=term",
]
pythonpath = [".", "src"]

[tool.coverage.report]
fail_under = 80
